--- a/src/Web/SunNext.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/Web/SunNext.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,39 +4,46 @@
     ViewData["Title"] = "Register";
 }
 
-<h1 class="text-center">@ViewData["Title"]</h1>
+<h1 class="text-center text-white">@ViewData["Title"]</h1>
 
 <center class="row justify-content-center">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div class="form-floating mb-3">
-                <input asp-for="Input.FirstName" class="form-control" aria-required="true" placeholder="John" />
-                <label asp-for="Input.FirstName" class="form-label">First Name</label>
+            <h2 class="text-white">Create a new account.</h2>
+            <hr class="bg-secondary" />
+
+            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+
+            <div class="mb-3">
+                <label asp-for="Input.FirstName" class="form-label text-light">First Name</label>
+                <input asp-for="Input.FirstName" class="form-control bg-dark text-white border-secondary" placeholder="John" />
                 <span asp-validation-for="Input.FirstName" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.LastName" class="form-control" aria-required="true" placeholder="Doe" />
-                <label asp-for="Input.LastName" class="form-label">Last Name</label>
+
+            <div class="mb-3">
+                <label asp-for="Input.LastName" class="form-label text-light">Last Name</label>
+                <input asp-for="Input.LastName" class="form-control bg-dark text-white border-secondary" placeholder="Doe" />
                 <span asp-validation-for="Input.LastName" class="text-danger"></span>
             </div>
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
+
+            <div class="mb-3">
+                <label asp-for="Input.Email" class="form-label text-light">Email</label>
+                <input asp-for="Input.Email" class="form-control bg-dark text-white border-secondary" placeholder="name@example.com" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.Password">Password</label>
+
+            <div class="mb-3">
+                <label asp-for="Input.Password" class="form-label text-light">Password</label>
+                <input asp-for="Input.Password" class="form-control bg-dark text-white border-secondary" placeholder="Password" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+
+            <div class="mb-3">
+                <label asp-for="Input.ConfirmPassword" class="form-label text-light">Confirm Password</label>
+                <input asp-for="Input.ConfirmPassword" class="form-control bg-dark text-white border-secondary" placeholder="Repeat Password" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
